# coolfeatures

./: .gitignore  CLAUDE.md  README.md
agentic_search/: .gitignore  CLAUDE.md  README.md  __init__.py  agent.py  app.py  client.py  config.py  evaluator.py  executor.py  frames_eval.py  generate.py  ingest.py  planner.py  prune.py  pyproject.toml  rerank.py  search.py  storage.py  wiki_executor.py
agentic_search/demo_corpus/: agentic_search_systems.md  bm25_sparse_retrieval.md  context_windows_and_rot.md  embeddings_and_similarity.md  reinforcement_learning_for_agents.md  reranking_methods.md  retrieval_augmented_generation.md  tool_use_and_function_calling.md  transformers_architecture.md  vector_databases.md
agentic_search/generation/: generate.py
agentic_search/retrieval/: agent.py  evaluator.py  executor.py  planner.py  prune.py  rerank.py  search.py  wiki_agent.py  wiki_executor.py  wikipedia.py
agentic_search/storage/: ingest.py  storage.py
agentic_search/tier1_retrieval/: executor.py  prune.py  rerank.py  wiki_agent.py
agentic_search/tier2_generation/: generate.py
agentic_search/tier3_storage/: ingest.py
docforge/: .gitignore  README.md  app.py  docx_template_pipeline.py  program.md  pyproject.toml
docforge/eval_corpus/: EVALUATION_DESIGN.md  TEMPLATE_CATALOG.md  catalog.json  evaluate.py
llm_wiki/: .gitignore  KNOWN_GAPS.md  README.md  chat.py  cli.py  engine.py  manifest.py  pyproject.toml  reset.py
llm_wiki/core/: __init__.py  backends.py  engine.py  manifest.py  theme.py
llm_wiki/tests/: test_engine.py  test_manifest.py
(+267 files in other folders)
