[project]
name = "agentic-search"
version = "0.1.0"
description = "Agentic search system with hybrid retrieval, self-editing context, and multi-hop reasoning — inspired by Chroma Context-1"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "chromadb>=0.6.3",
    "rank-bm25>=0.2.2",
    "streamlit>=1.41.0",
]
